--- a/gen-expression.ipynb
+++ b/gen-expression.ipynb
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -544,14 +544,14 @@
    "source": [
     "plt.figure(figsize=(12, 6))\n",
     "sns.boxplot(data=[actual_data['patient'], actual_data_no_outliers['patient']], orient='h', palette=['red', 'blue'])\n",
-    "plt.title(\"Aykırı Değerlerin Etkisi\")\n",
-    "plt.xticks([0, 1], ['Orjinal', 'Temizlenmiş'])\n",
+    "plt.title(\"Effect of Outliers\")\n",
+    "plt.xticks([0, 1], ['Original', 'Cleaned'])\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -566,9 +566,9 @@
     }
    ],
    "source": [
-    "actual_data = actual_data.isnull().sum()\n",
-    "print(\"Eksik Veriler:\")\n",
-    "print(actual_data)"
+    "missing_values = actual_data.isnull().sum()\n",
+    "print(\"Missing Data:\")\n",
+    "print(missing_values)"
    ]
   },
   {
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -625,13 +625,13 @@
    ],
    "source": [
     "cancer_counts = actual_data['cancer'].value_counts()\n",
-    "print(\"Kanser Türleri Dağılımı:\")\n",
+    "print(\"Distribution of Cancer Types:\")\n",
     "print(cancer_counts)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -648,8 +648,8 @@
    "source": [
     "plt.figure(figsize=(10, 6))\n",
     "sns.boxplot(data=actual_data, x='cancer', y='patient')\n",
-    "plt.title(\"Kanser Türleri ve Patient İlişkisi\")\n",
-    "plt.show()"
+    "plt.title(\"Relationship Between Cancer Types and Patients\")\n",
+    "plt.show()\n"
    ]
   },
   {
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -681,7 +681,7 @@
     "correlation_matrix = actual_data.corr()\n",
     "plt.figure(figsize=(10, 6))\n",
     "sns.heatmap(correlation_matrix, annot=True, cmap='coolwarm')\n",
-    "plt.title(\"Özellikler Arası Korelasyon\")\n",
+    "plt.title(\"Correlation Between Features\")\n",
     "plt.show()"
    ]
   },
@@ -733,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -746,9 +746,9 @@
    ],
    "source": [
     "if p_value < 0.05:\n",
-    "    print(\"İki kanser türü arasındaki gen ifadesi farkı istatistiksel olarak anlamlıdır.\")\n",
+    "    print(\"The difference in gene expression between the two cancer types is statistically significant.\")\n",
     "else:\n",
-    "    print(\"İki kanser türü arasındaki gen ifadesi farkı istatistiksel olarak anlamlı değildir.\")"
+    "    print(\"The difference in gene expression between the two cancer types is not statistically significant.\")"
    ]
   },
   {
@@ -817,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -838,10 +838,9 @@
     }
    ],
    "source": [
-    "# Modelin tahminlerini yapın\n",
+    "\n",
     "y_pred = rf_model.predict(X_test)\n",
     "\n",
-    "# Doğruluk ve sınıflandırma raporu hesaplayın\n",
     "accuracy = accuracy_score(y_test, y_pred)\n",
     "report = classification_report(y_test, y_pred)\n",
     "\n",
@@ -949,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -967,7 +966,6 @@
     "pca_df = pd.DataFrame({'Principal Component 1': X_pca[:, 0]})\n",
     "pca_df['cancer_AML'] = y\n",
     "\n",
-    "# PCA sonuçlarını görselleştirin\n",
     "plt.figure(figsize=(10, 6))\n",
     "sns.scatterplot(data=pca_df, x='Principal Component 1', y=np.zeros_like(X_pca[:, 0]), hue='cancer_AML', palette='viridis')\n",
     "plt.title(\"PCA Sonuçları\")\n",
@@ -977,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -992,13 +990,11 @@
     }
    ],
    "source": [
-    "# Veri kümenizde bulunan bir gen adını seçin (örneğin, ilk sıradaki gen adı)\n",
+    "\n",
     "selected_gene = X.columns[0]\n",
     "\n",
-    "# Seçilen genin ifade profilini çıkarın\n",
     "gene_expression = X[selected_gene]\n",
     "\n",
-    "# Gen ifade profilini kanser türlerine göre gösteren çizgi grafiği oluşturun\n",
     "plt.figure(figsize=(10, 6))\n",
     "sns.lineplot(data=pd.DataFrame({'Gene Expression': gene_expression, 'Cancer Type': y}), x='Cancer Type', y='Gene Expression')\n",
     "plt.title(f'Gen İfade Profili: {selected_gene}')\n",
@@ -1010,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1025,10 +1021,9 @@
     }
    ],
    "source": [
-    "# Örnek olarak bazı genlerin zenginleştirilme p-değerleri\n",
+    "\n",
     "enrichment_p_values = [0.01, 0.05, 0.1, 0.2]\n",
     "\n",
-    "# Zenginleştirme p-değerlerini gösteren çubuk grafiği çizin\n",
     "plt.figure(figsize=(10, 6))\n",
     "sns.barplot(x=['Gene 1', 'Gene 2', 'Gene 3', 'Gene 4'], y=enrichment_p_values, palette='viridis')\n",
     "plt.title('Gen Zenginleştirme Analizi')\n",
